ES6: Object Literal Methods toString is missing method name https://bugs.webkit.org/show_bug.cgi?id=142992

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-03-24
Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

Always stringify functions in the pattern:

  "function " + <function name> + <text from opening parenthesis to closing brace>.

* runtime/FunctionPrototype.cpp:
(JSC::functionProtoFuncToString):
Update the path that was not stringifying in this pattern.

* bytecode/UnlinkedCodeBlock.cpp:
(JSC::UnlinkedFunctionExecutable::UnlinkedFunctionExecutable):
* bytecode/UnlinkedCodeBlock.h:
(JSC::UnlinkedFunctionExecutable::parametersStartOffset):
* parser/Nodes.h:
* runtime/Executable.cpp:
(JSC::FunctionExecutable::FunctionExecutable):
* runtime/Executable.h:
(JSC::FunctionExecutable::parametersStartOffset):
Pass the already known function parameter opening parenthesis
start offset through to the FunctionExecutable.

* tests/mozilla/js1_5/Scope/regress-185485.js:
(with.g):
Add back original space in this test that was removed by r181810
now that we have the space again in stringification.

LayoutTests:

* js/class-syntax-default-constructor-expected.txt:
This test was already failing, it now fails in a different way.

* js/object-literal-computed-methods-expected.txt:
* js/object-literal-methods-expected.txt:
These tests now pass.

* fast/dom/TreeWalker/acceptNode-filter-expected.txt:
* js/destructuring-assignment-expected.txt:
* js/dfg-redundant-load-of-captured-variable-proven-constant-expected.txt:
* js/dfg-resolve-global-specific-dictionary-expected.txt:
* js/dom/JSON-parse-expected.txt:
* js/dom/JSON-stringify-expected.txt:
* js/dom/dfg-strcat-over-objects-then-exit-on-it-expected.txt:
* js/dom/function-prototype-expected.txt:
* js/dom/toString-and-valueOf-override-expected.txt:
* js/kde/lval-exceptions-expected.txt:
* storage/domstorage/localstorage/string-conversion-expected.txt:
* storage/domstorage/sessionstorage/string-conversion-expected.txt:
* js/dom/script-tests/dfg-strcat-over-objects-then-exit-on-it.js:
* js/script-tests/dfg-redundant-load-of-captured-variable-proven-constant.js:
* js/script-tests/dfg-resolve-global-specific-dictionary.js:
* js/dom/function-prototype.html:
Update tests to add expected whitespace for stringifying a function
with no name.

Canonical link: https://commits.webkit.org/161029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181901 268f45cc-cd09-0410-ab3c-d52691b4dbfc